Add license attribute
https://docs.npmjs.com/files/package.json#license
http://npm1k.org/

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "precommit-hook": "0.3.10",
     "tape": "^2.13.1"
   },
+  "license": "MIT",
   "scripts": {
     "test": "node test.js"
   }
