fixed socket.io to 1.3.7

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "getconfig": "2.1.0",
     "node-uuid": "1.2.0",
-    "socket.io": "^1.3.7",
+    "socket.io": "1.3.7",
     "yetify": "0.0.1"
   },
   "main": "server.js",
