--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "signal-master",
   "description": "Simple signaling server for SimpleWebRTC",
-  "version": "0.2.3",
+  "version": "1.0.0",
   "dependencies": {
     "getconfig": "2.1.0",
     "node-uuid": "1.2.0",
-    "socket.io": "^1.3.7",
+    "socket.io": "1.3.7",
     "yetify": "0.0.1"
   },
   "main": "server.js",
