--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "description": "Simple signaling server for SimpleWebRTC",
   "version": "1.0.1",
   "dependencies": {
-    "getconfig": "2.1.0",
-    "node-uuid": "1.2.0",
-    "socket.io": "1.3.7",
-    "yetify": "0.0.1"
+    "getconfig": "^2.1.0",
+    "node-uuid": "^1.2.0",
+    "socket.io": "^1.3.7",
+    "yetify": "^0.0.1"
   },
   "main": "server.js",
   "repository": {
