--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "chance": "^1.0.9",
+    "getconfig": "^3.1.0",
     "hapi": "^16.4.3",
+    "keyfob": "^1.0.0",
     "knex": "^0.13.0",
     "muckraker": "^3.4.0",
     "pg": "^6.2.4"
