--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "knex": "^0.13.0",
     "muckraker": "^3.4.0",
     "pg": "^6.2.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
