--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "dependencies": {
     "chance": "^1.0.9",
     "getconfig": "^3.1.0",
+    "good": "^7.2.0",
+    "good-console": "^6.4.0",
+    "good-squeeze": "^5.0.2",
     "hapi": "^16.4.3",
+    "jsonwebtoken": "^7.4.1",
     "keyfob": "^1.0.0",
     "knex": "^0.13.0",
     "muckraker": "^3.4.0",
