--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "good-console": "^6.4.0",
     "good-squeeze": "^5.0.2",
     "hapi": "^16.4.3",
+    "hapi-auth-basic": "^4.2.0",
     "jsonwebtoken": "^7.4.1",
     "keyfob": "^1.0.0",
     "knex": "^0.13.0",
