--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "base32-crockford-browser": "^1.0.0",
     "chance": "^1.0.9",
     "getconfig": "^3.1.0",
     "good": "^7.2.0",
