--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "hapi-auth-basic": "^4.2.0",
     "hapi-auth-jwt2": "^7.2.4",
     "http-proxy": "^1.16.2",
+    "inert": "^4.2.0",
     "jsonwebtoken": "^7.4.1",
     "keyfob": "^1.0.0",
     "knex": "^0.13.0",
     "muckraker": "^3.4.0",
     "pg": "^6.2.4",
-    "ua-parser-js": "^0.7.12"
+    "pug": "^2.0.0-rc.2",
+    "ua-parser-js": "^0.7.12",
+    "vision": "^4.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
