config, telemetry tests

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "seed": "node seed",
     "createdb": "psql -d postgres -c \"CREATE ROLE talky WITH PASSWORD 'password' NOSUPERUSER NOCREATEDB NOCREATEROLE INHERIT LOGIN\" && createdb talky_api -O talky",
     "destroydb": "psql -d postgres -c \"DROP DATABASE talky_api\" && psql -d postgres -c \"DROP ROLE talky;\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "lab -t 100 -v -e development",
     "start-prosody": "node ./scripts/start-prosody",
     "prosody-config": "node ./scripts/prosody-config",
     "prosody-config-install-docker": "npm run -s prosody-config > config/prosody.cfg.lua",
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^7.4.1",
     "keyfob": "^1.0.0",
     "knex": "^0.13.0",
+    "lab": "^14.1.0",
     "muckraker": "^3.4.0",
     "pg": "^6.2.4",
     "pug": "^2.0.0-rc.2",
