--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "base32-crockford-browser": "^1.0.0",
     "boom": "^5.1.0",
     "chance": "^1.0.9",
+    "cheerio": "^1.0.0-rc.2",
     "getconfig": "^3.1.0",
     "good": "^7.2.0",
     "good-console": "^6.4.0",
