starting some minor cleanup of db and input validation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "knex": "knex",
-    "seed": "node seed",
     "createdb": "psql -d postgres -c \"CREATE ROLE talky WITH PASSWORD 'password' NOSUPERUSER NOCREATEDB NOCREATEROLE INHERIT LOGIN\" && createdb talky_api -O talky",
     "destroydb": "psql -d postgres -c \"DROP DATABASE talky_api\" && psql -d postgres -c \"DROP ROLE talky;\"",
     "test": "lab -t 100 -v -e development",
@@ -17,6 +16,7 @@
     "prosody-config-install-docker": "npm run -s prosody-config > config/prosody.cfg.lua",
     "prosody-config-install-local": "npm run -s prosody-config > /usr/local/etc/prosody/prosody.cfg.lua",
     "prosody-config-install-etc": "npm run -s prosody-config > /etc/prosody/prosody.cfg.lua",
+    "prosody-config-generate": "npm run -s prosody-config > ./prosody.cfg.lua",
     "dev-license-gen": "node ./scripts/dev-license-gen"
   },
   "author": "",
