add swagger docs to a bunch of routes
also some code cleanup

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api.talky.io",
   "version": "1.0.0",
-  "description": "",
+  "description": "Talky Metrics API",
   "main": "server.js",
   "scripts": {
     "start": "nodemon -e js,json,lua,pug,css server.js",
@@ -34,6 +34,7 @@
     "hapi-auth-basic": "^4.2.0",
     "hapi-auth-jwt2": "^7.2.4",
     "hapi-pagination": "^1.20.0",
+    "hapi-swagger": "^7.7.0",
     "http-proxy": "^1.16.2",
     "humanize-duration": "^3.10.0",
     "inert": "^4.2.0",
