--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
   "dependencies": {
     "base32-crockford-browser": "^1.0.0",
     "boom": "^5.1.0",
-    "chance": "^1.0.9",
-    "cheerio": "^1.0.0-rc.2",
     "getconfig": "^3.1.0",
     "good": "^7.2.0",
     "good-console": "^6.4.0",
@@ -41,7 +39,6 @@
     "jsonwebtoken": "^7.4.1",
     "keyfob": "^1.0.0",
     "knex": "^0.13.0",
-    "lab": "^14.1.0",
     "muckraker": "^3.4.0",
     "pg": "^6.2.4",
     "pug": "^2.0.0-rc.2",
@@ -49,7 +46,13 @@
     "vision": "^4.1.1"
   },
   "devDependencies": {
+    "chance": "^1.0.9",
+    "cheerio": "^1.0.0-rc.2",
+    "code": "^4.1.0",
+    "faker": "^4.1.0",
+    "lab": "^14.1.0",
     "minimist": "^1.2.0",
+    "nock": "^9.0.14",
     "nodemon": "^1.11.0",
     "readline-sync": "^1.4.7"
   }
