finish refactor of tests for now

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "knex": "knex",
     "createdb": "psql -d postgres -c \"CREATE ROLE talky WITH PASSWORD 'password' NOSUPERUSER NOCREATEDB NOCREATEROLE INHERIT LOGIN\" && createdb talky_api -O talky",
     "destroydb": "psql -d postgres -c \"DROP DATABASE talky_api\" && psql -d postgres -c \"DROP ROLE talky;\"",
-    "test": "lab -t 100 -v -e development",
+    "test": "lab -t 100 -v -e test",
     "start-prosody": "node ./scripts/start-prosody",
     "prosody-config": "node ./scripts/prosody-config",
     "prosody-config-install-docker": "npm run -s prosody-config > config/prosody.cfg.lua",
