--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "knex": "knex",
     "createdb": "psql -d postgres -c \"CREATE ROLE talky WITH PASSWORD 'password' NOSUPERUSER NOCREATEDB NOCREATEROLE INHERIT LOGIN\" && createdb talky_api -O talky",
     "destroydb": "psql -d postgres -c \"DROP DATABASE talky_api\" && psql -d postgres -c \"DROP ROLE talky;\"",
-    "test": "lab -t 100 -v -e test",
+    "test": "lab -L -v -e test",
     "start-prosody": "node ./scripts/start-prosody",
     "prosody-config": "node ./scripts/prosody-config",
     "prosody-config-install-docker": "npm run -s prosody-config > config/prosody.cfg.lua",
@@ -50,6 +50,7 @@
     "chance": "^1.0.9",
     "cheerio": "^1.0.0-rc.2",
     "code": "^4.1.0",
+    "eslint-config-andyet": "^2.1.0",
     "faker": "^4.1.0",
     "lab": "^14.1.0",
     "minimist": "^1.2.0",
