--- a/prosody_docker/Dockerfile
+++ b/prosody_docker/Dockerfile
@@ -4,8 +4,11 @@ MAINTAINER Heather Young heather@andyet.net
 
 USER root
 
-ADD ../prosody_modules /etc/prosody_modules
+ADD prosody_modules /etc/prosody_modules
+ADD certs.key /etc/prosody_certs/certs.key
+ADD certs.pem /etc/prosody_certs/certs.pem
 RUN chown -R prosody:prosody /etc/prosody_modules \
+ && chown -R prosody:prosody /etc/prosody_certs \
  && chown -R prosody:prosody /etc/prosody
 
 USER prosody
