purge db config

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,5 @@
 pipeline:
-  docker:
+  docker_stage:
     image: plugins/docker
     repo: andyet/talky-api-stage
     tags: 
@@ -8,29 +8,28 @@ pipeline:
     secrets: [ docker_username, docker_password, docker_email ]
     when:
       event: tag
-  docker:
+  docker_prod:
     image: plugins/docker
     repo: andyet/talky-api-prod
     tags: 
       - ${DRONE_TAG##v}
-      - latest
     secrets: [ docker_username, docker_password, docker_email ]
     when:
+      event: deployment
+  deploy_stage:
+    image: quay.io/honestbee/drone-kubernetes
+    kubernetes_server: ${KUBERNETES_SERVER}
+    kubernetes_cert: ${KUBERNETES_CERT}
+    kubernetes_token: ${KUBERNETES_TOKEN}
+    deployment: talky-core-api
+    repo: andyet/talky-core-api
+    container: api
+    namespace: default
+    tag: 
+    - ${DRONE_TAG##v}
+    when:
       event: tag
-  # deploy_stage:
-  #   image: quay.io/honestbee/drone-kubernetes
-  #   kubernetes_server: ${KUBERNETES_SERVER}
-  #   kubernetes_cert: ${KUBERNETES_CERT}
-  #   kubernetes_token: ${KUBERNETES_TOKEN}
-  #   deployment: talky-core-api
-  #   repo: andyet/talky-core-api
-  #   container: api
-  #   namespace: default
-  #   tag: 
-  #   - ${DRONE_TAG##v}
-  #   when:
-  #     event: tag
-  #   secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
+    secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
   slack:
     image: plugins/slack
     username: drone
