--- a/.drone.yml
+++ b/.drone.yml
@@ -21,14 +21,28 @@ pipeline:
     kubernetes_server: ${KUBERNETES_SERVER}
     kubernetes_cert: ${KUBERNETES_CERT}
     kubernetes_token: ${KUBERNETES_TOKEN}
-    deployment: talky-core-api
-    repo: andyet/talky-core-api
+    deployment: talky-api-stage
+    repo: andyet/talky-api-stage
     container: api
     namespace: default
     tag: 
     - ${DRONE_TAG##v}
     when:
       event: tag
+    secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
+  deploy_prod:
+    image: quay.io/honestbee/drone-kubernetes
+    kubernetes_server: ${KUBERNETES_SERVER}
+    kubernetes_cert: ${KUBERNETES_CERT}
+    kubernetes_token: ${KUBERNETES_TOKEN}
+    deployment: talky-api-prod
+    repo: andyet/talky-api-prod
+    container: api
+    namespace: default
+    tag: 
+    - ${DRONE_TAG##v}
+    when:
+      event: deploy
     secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
   slack:
     image: plugins/slack
