--- a/.drone.yml
+++ b/.drone.yml
@@ -4,11 +4,26 @@ pipeline:
     repo: andyet/talky-api
     tags: 
       - ${DRONE_TAG##v}
+      - ${DRONE_COMMIT_SHA:0:8}
       - latest
     secrets: [ docker_username, docker_password, docker_email ]
     when:
       event: tag
-  deploy_stage:
+  # deploy_stage:
+  #   image: quay.io/honestbee/drone-kubernetes
+  #   kubernetes_server: ${KUBERNETES_SERVER}
+  #   kubernetes_cert: ${KUBERNETES_CERT}
+  #   kubernetes_token: ${KUBERNETES_TOKEN}
+  #   deployment: talky-api-stage
+  #   repo: andyet/talky-api
+  #   container: api
+  #   namespace: default
+  #   tag: 
+  #   - ${DRONE_TAG##v}
+  #   when:
+  #     event: tag
+  #   secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
+  deploy_prod:
     image: quay.io/honestbee/drone-kubernetes
     kubernetes_server: ${KUBERNETES_SERVER}
     kubernetes_cert: ${KUBERNETES_CERT}
@@ -18,22 +33,7 @@ pipeline:
     container: api
     namespace: default
     tag: 
-    - ${DRONE_TAG##v}
-    when:
-      event: tag
-      branch: master
-    secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
-  deploy_prod:
-    image: quay.io/honestbee/drone-kubernetes
-    kubernetes_server: ${KUBERNETES_SERVER}
-    kubernetes_cert: ${KUBERNETES_CERT}
-    kubernetes_token: ${KUBERNETES_TOKEN}
-    deployment: talky-api-prod
-    repo: andyet/talky-api
-    container: api
-    namespace: default
-    tag: 
-    - latest
+    - ${DRONE_COMMIT_SHA:0:8}
     when:
       event: deploy
     secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
