--- a/.drone.yml
+++ b/.drone.yml
@@ -3,27 +3,12 @@ pipeline:
     image: plugins/docker
     repo: andyet/talky-api
     tags: 
-      - ${DRONE_TAG##v}
       - ${DRONE_COMMIT_SHA:0:8}
       - latest
     secrets: [ docker_username, docker_password, docker_email ]
     when:
       event: tag
-  # deploy_stage:
-  #   image: quay.io/honestbee/drone-kubernetes
-  #   kubernetes_server: ${KUBERNETES_SERVER}
-  #   kubernetes_cert: ${KUBERNETES_CERT}
-  #   kubernetes_token: ${KUBERNETES_TOKEN}
-  #   deployment: talky-api-stage
-  #   repo: andyet/talky-api
-  #   container: api
-  #   namespace: default
-  #   tag: 
-  #   - ${DRONE_TAG##v}
-  #   when:
-  #     event: tag
-  #   secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
-  deploy:
+  deploy_stage:
     image: quay.io/honestbee/drone-kubernetes
     kubernetes_server: ${KUBERNETES_SERVER}
     kubernetes_cert: ${KUBERNETES_CERT}
@@ -33,6 +18,20 @@ pipeline:
     container: api
     namespace: default
     tag: 
+    - ${DRONE_TAG##v}
+    when:
+      event: tag
+    secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
+  deploy:
+    image: quay.io/honestbee/drone-kubernetes
+    kubernetes_server: ${KUBERNETES_SERVER}
+    kubernetes_cert: ${KUBERNETES_CERT}
+    kubernetes_token: ${KUBERNETES_TOKEN}
+    deployment: talky-api-prod
+    repo: andyet/talky-api
+    container: api
+    namespace: default
+    tag:
     - ${DRONE_COMMIT_SHA:0:8}
     when:
       event: deployment
