--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.1",
   "dependencies": {
     "getconfig": "2.1.0",
-    "node-uuid": "1.2.0",
     "socket.io": "1.3.7",
+    "uuid": "^3.1.0",
     "yetify": "0.0.1"
   },
   "main": "server.js",
