--- a/.drone.yml
+++ b/.drone.yml
@@ -4,6 +4,7 @@ pipeline:
     repo: andyet/talky-api
     tags: 
       - ${DRONE_COMMIT_SHA:0:8}
+      - ${DRONE_TAG##v}
       - latest
     secrets: [ docker_username, docker_password, docker_email ]
     when:
@@ -31,8 +32,7 @@ pipeline:
     repo: andyet/talky-api
     container: api
     namespace: default
-    tag:
-    - ${DRONE_COMMIT_SHA:0:8}
+    tag: ${DRONE_COMMIT_SHA:0:8}
     when:
       event: deployment
     secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
