fix db scripts to use config

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "rollback": "knex migrate:rollback",
     "lint": "eslint .",
     "knex": "knex",
-    "createdb": "psql -d postgres -c \"CREATE ROLE talky WITH PASSWORD 'z00mz00mbu773r%p1rat3s' NOSUPERUSER NOCREATEDB NOCREATEROLE INHERIT LOGIN\" && createdb talky_api -O talky",
-    "destroydb": "psql -d postgres -c \"DROP DATABASE talky_api\" && psql -d postgres -c \"DROP ROLE talky;\"",
+    "createdb": "psql -d postgres -c \"CREATE ROLE $(node -pe 'require(\"getconfig\").db.user') WITH PASSWORD '$(node -pe 'require(\"getconfig\").db.password')' NOSUPERUSER NOCREATEDB NOCREATEROLE INHERIT LOGIN\" && createdb $(node -pe 'require(\"getconfig\").db.database') -O $(node -pe 'require(\"getconfig\").db.user')",
+    "destroydb": "psql -d postgres -c \"DROP DATABASE $(node -pe 'require(\"getconfig\").db.database')\" && psql -d postgres -c \"DROP ROLE $(node -pe 'require(\"getconfig\").db.user');\"",
     "test": "lab -a code -L -v -e test",
     "coverage": "lab -a code -e test -L -r html -o coverage.html",
     "start-prosody": "node ./scripts/start-prosody",
@@ -43,7 +43,7 @@
     "inert": "^4.2.0",
     "jsonwebtoken": "^8.1.0",
     "keyfob": "^1.0.0",
-    "knex": "^0.13.0",
+    "knex": "^0.14.2",
     "minimist": "^1.2.0",
     "muckraker": "^3.4.0",
     "pg": "^7.3.0",
