first pass at refactor, most tests pass

--- a/package.json
+++ b/package.json
@@ -26,31 +26,31 @@
   "author": "",
   "license": "See LICENSE file",
   "dependencies": {
+    "@now-ims/hapi-now-auth": "^1.0.1",
     "array-shuffle": "^1.0.1",
     "base32-crockford-browser": "^1.0.0",
-    "boom": "^6.0.0",
+    "boom": "^7.1.1",
     "getconfig": "^4.0.0",
-    "good": "^7.3.0",
+    "good": "^8.0.0-rc1",
     "good-console": "^6.4.0",
     "good-squeeze": "^5.0.2",
-    "hapi": "^16.6.2",
-    "hapi-auth-basic": "^4.2.0",
-    "hapi-auth-jwt2": "^7.2.4",
-    "hapi-pagination": "^1.20.0",
-    "hapi-swagger": "^8.0.0",
+    "hapi": "^17.2.0",
+    "hapi-auth-basic": "^5.0.0",
+    "hapi-pagination": "^2.0.0",
+    "hapi-swagger": "^9.0.2",
     "http-proxy": "^1.16.2",
     "humanize-duration": "^3.11.0",
-    "inert": "^4.2.0",
+    "inert": "^5.0.1",
     "jsonwebtoken": "^8.1.0",
     "keyfob": "^1.0.0",
     "knex": "^0.14.2",
     "minimist": "^1.2.0",
-    "muckraker": "^3.4.0",
+    "muckraker": "^4.0.1",
     "pg": "^7.3.0",
     "pug": "^2.0.0-rc.4",
     "redis": "^2.8.0",
     "ua-parser-js": "^0.7.17",
-    "vision": "^4.1.1"
+    "vision": "^5.3.0"
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.2",
