--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:andyet/signal-master.git"
+    "url": "git@github.com:andyet/signalmaster.git"
   },
   "devDependencies": {
     "socket.io-client": "1.3.7",
