name build steps more descriptively

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,18 @@
 pipeline:
-  docker_stage:
+  build_docker_stage:
     image: plugins/docker
     repo: andyet/talky-api
     tags: 
       - ${DRONE_COMMIT_SHA:0:8}
       - ${DRONE_TAG##v}
+    secrets: [ docker_username, docker_password ]
+    when:
+      event: [ tag, deployment ]
+  build_docker_prod:
+    image: plugins/docker
+    repo: andyet/talky-api
+    tags: 
+      - ${DRONE_COMMIT_SHA:0:8}
       - latest
     secrets: [ docker_username, docker_password ]
     when:
@@ -23,7 +31,7 @@ pipeline:
     when:
       event: tag
     secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
-  deploy:
+  deploy_prod:
     image: quay.io/honestbee/drone-kubernetes
     kubernetes_server: ${KUBERNETES_SERVER}
     kubernetes_cert: ${KUBERNETES_CERT}
