--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,14 @@
 pipeline:
+  migratedb_stage:
+    image: node:8
+    commands:
+      - export DATABASE_URL=$${DATABASE_URL}
+      - npm i knex
+      - NODE_ENV=migrate npm run migrate
+    when:
+      event: tag
+    secrets:
+      - database_url
   build_docker_stage:
     image: plugins/docker
     repo: andyet/talky-api
