--- a/.drone.yml
+++ b/.drone.yml
@@ -1,14 +1,16 @@
 pipeline:
-  # migratedb_stage:
-  #   image: node:8
-  #   commands:
-  #     - export DATABASE_URL=$${DATABASE_URL}
-  #     - npm i knex
-  #     - NODE_ENV=migrate npm run migrate
-  #   when:
-  #     event: tag
-  #   secrets:
-  #     - database_url
+  migratedb_stage:
+    image: node:8
+    commands:
+      - export DATABASE_URL=$${DATABASE_URL}
+      - npm i knex
+      - npm ls
+      - touch /thisfileshouldnotbehere
+      - NODE_ENV=migrate npm run migrate
+    when:
+      event: tag
+    secrets:
+      - database_url
   build_docker_stage:
     image: plugins/docker
     repo: andyet/talky-api
@@ -27,20 +29,20 @@ pipeline:
     secrets: [ docker_username, docker_password ]
     when:
       event: [ deployment ]
-  deploy_api_stage:
-    image: quay.io/honestbee/drone-kubernetes
-    kubernetes_server: ${KUBERNETES_SERVER}
-    kubernetes_cert: ${KUBERNETES_CERT}
-    kubernetes_token: ${KUBERNETES_TOKEN}
-    deployment: talky-api-stage
-    repo: andyet/talky-api
-    container: api
-    namespace: default
-    tag: 
-    - ${DRONE_TAG##v}
-    when:
-      event: tag
-    secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
+  # deploy_api_stage:
+  #   image: quay.io/honestbee/drone-kubernetes
+  #   kubernetes_server: ${KUBERNETES_SERVER}
+  #   kubernetes_cert: ${KUBERNETES_CERT}
+  #   kubernetes_token: ${KUBERNETES_TOKEN}
+  #   deployment: talky-api-stage
+  #   repo: andyet/talky-api
+  #   container: api
+  #   namespace: default
+  #   tag: 
+  #   - ${DRONE_TAG##v}
+  #   when:
+  #     event: tag
+  #   secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
   deploy_prod:
     image: quay.io/honestbee/drone-kubernetes
     kubernetes_server: ${KUBERNETES_SERVER}
